deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: kristianwindsor/jenkins
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 0m
          volumeMounts:
            - name: jenkins-storage
              mountPath: /var/jenkins_home/
      volumes:
        - name: jenkins-storage
          persistentVolumeClaim:
            claimName: jenkins-storage
      securityContext:
        runAsUser: 0
